# pluot

./: .gitignore  .gitmodules  404.html  CITATION.cff  CNAME  COORDINATE_SYSTEMS.md  Cargo.toml  LICENSE  LICENSE_MIT  NOTICE  README.md  README_FROM_TEMPLATE.md  awesome-rust-plotting.md  awesome-rust-vis.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  sitemap-0.xml  sitemap-index.xml  tsconfig.json  vitest.config.js
bindings-r/src/: Cargo.toml  Makevars  Makevars.win  wrapper.c
bindings-r/src/.cargo/: .global-cache
bindings-r/src/pluotr_rs/: Cargo.toml  api.h
bindings-r/src/pluotr_rs/src/: lib.rs  render.rs
crates/pluot/: Cargo.toml  README.md
crates/pluot/src/: layer_params.rs  lib.rs  params.rs  picking.rs  plugins.rs  render.rs  render_params.rs
crates/pluot/tests/: README.md  render_squares.rs  snapshot_utils.rs  test_bitmap_layer.rs  test_curve_layer.rs  test_line_layer.rs  test_multi_layer.rs  test_point_3d_layer.rs  test_point_layer.rs  test_polygon_layer.rs  test_rect_layer.rs  test_render_script.rs  test_render_script_integration.rs  test_render_script_integration_python.rs  test_render_script_integration_r.rs  test_text_layer.rs  test_wasm_lib.rs  wasm_lib.rs
crates/pluot/tests/snaps-blessed/: test_render.json  test_render_expression.R  test_render_expression.js  test_render_expression.jsx  test_render_expression.py  test_render_expression.rs.txt  test_render_script.R  test_render_script.html  test_render_script.js  test_render_script.py  test_render_script.rs.txt  test_render_script.sh  test_render_script_react.jsx
crates/pluot/tests/test_utils/: mod.rs  render_script_integration.rs  snapshot_utils.rs
crates/pluot_core/: Cargo.toml  README.md
crates/pluot_core/src/: bindings.rs  bindings_from.rs  cache.rs  color_mode.rs  colormaps_categorical.rs  colormaps_quantitative.rs  compute_example.rs  layer_traits.rs  layered_plot.rs  lib.rs  numeric_data.rs  params.rs  picking.rs  picking_geometry.rs  positioning.rs  registry.rs  render.rs  render_post.rs  render_script.rs  render_traits.rs  render_types.rs  scalar_mode.rs  shader_modules.rs  timeout.rs  viewport.rs  zarr.rs  zarr_types.rs
crates/pluot_core/src/composite_layers/: README.md  axis_band_layer.rs  axis_linear_layer.rs  bar_plot_layer.rs  curve_layer.rs  histogram_layer.rs  mod.rs  polygon_layer.rs
crates/pluot_core/src/compute/: example.rs  mod.rs  reduce.rs
crates/pluot_core/src/compute/shaders/: reduce.wgsl
crates/pluot_core/src/d3/: README.md  axis.rs  mod.rs  scale.rs
crates/pluot_core/src/layers/: axis_band_layer.rs  axis_layer.rs  axis_linear_layer.rs  bitmap_layer.rs  composite_layer.rs  compute_layer.rs  curve_and_polygon_utils.rs  curve_layer.rs  curve_utils.rs  filled_curve_layer.rs  filled_polygon_layer.rs  line_layer.rs  mod.rs  multiscale_layer.rs  multiscale_utils.rs  point_3d_layer.rs  point_layer.rs  polygon_layer.rs  position_utils.rs  rect_layer.rs  scatterplot_layer.rs  stroked_curve_layer.rs  stroked_polygon_layer.rs  text_layer.rs  tile_layer.rs  triangulated_layer.rs
crates/pluot_core/src/layers/shaders/: bitmap_layer.wgsl  colormaps.wgsl  curve_layer.wgsl  filled_polygon_layer.wgsl  line_layer.wesl  line_layer.wgsl  point_3d_layer.wgsl  point_layer.wgsl  rect_layer.wgsl  text_layer.wgsl  (+4 more)
crates/pluot_core/src/plot_layers/: bar_plot_layer.rs  histogram_layer.rs  mod.rs  scatterplot_layer.rs
crates/pluot_core/src/plots/: barplot.rs  bioimage.rs  layered_plot.rs  mod.rs  scatterplot_3d.rs
crates/pluot_core/src/two/: README.md  mod.rs  shapes.rs  svg.rs  text_fontdue.rs
crates/pluot_core/src/wgsl_functions/: README.md  flat_texel_coord.wgsl  get_aspect_ratio_mat.wgsl  rotate_z.wgsl  scale.wgsl  translate.wgsl
crates/pluot_core/src/zarr_layers/: zarr_point_layer.rs
crates/pluot_core/tests/: README.md  render_squares.rs  test_bitmap_layer.rs  test_compute_reduce_cpu.rs  test_compute_reduce_gpu.rs  test_line_layer.rs  test_multi_layer.rs  test_numeric_data.rs  test_pick_bitmap.rs  test_pick_curves.rs  test_pick_lines.rs  test_pick_points.rs  test_pick_polygons.rs  test_pick_rects.rs  test_pick_text.rs  test_point_layer.rs  test_positioning.rs  test_rect_layer.rs  test_text_layer.rs  test_viewport.rs  wasm_lib.rs
crates/pluot_core/tests/test_utils/: snapshot_utils.rs
crates/pluot_triangulation/: Cargo.toml  README.md
crates/pluot_wesl/: Cargo.toml  build.rs
crates/pluot_wesl/src/: lib.rs
crates/pluot_wesl/src/shaders/: bitmap_layer.wesl  point_layer.wesl  rect_layer.wesl  text_layer.wesl  utils.wesl
crates/pluot_zarr/: Cargo.toml  README.md
crates/pluot_zarr/src/: lib.rs  zarr_numeric_data.rs
crates/pluot_zarr/src/layers/: mod.rs  ome_zarr_bitmap_layer.rs  ome_zarr_multiscale_layer.rs  ome_zarr_utils.rs  zarr_bar_layer.rs  zarr_bar_plot_layer.rs  zarr_histogram_layer.rs  zarr_point_3d_layer.rs  zarr_point_layer.rs  zarr_scatterplot_layer.rs
crates/pluot_zarr/tests/: test_zarrs.rs  zarrs_test.rs
crates/vendored_futures_time/: Cargo.toml  README.md
crates/vendored_futures_time/src/: lib.rs
crates/vendored_futures_time/src/future/: future_ext.rs  into_future.rs  mod.rs
crates/vendored_futures_time/src/stream/: buffer.rs  debounce.rs  interval.rs  sample.rs  stream_ext.rs  throttle.rs
crates/vendored_futures_time/src/task/: mod.rs  sleep.rs  sleep_until.rs  web_timer.rs
crates/vendored_futures_time/src/time/: duration.rs  instant.rs
examples/pluot_cli/: Cargo.toml  README.md  compare_circles_via_svg.sh  compare_text_via_svg.sh  compare_via_svg.sh
examples/pluot_cli/examples/: layers.in.json
examples/pluot_cli/src/: img_diff.rs  main.rs
examples/pluot_egui/: Cargo.toml  README.md
examples/pluot_egui/src/: app.rs  main.rs
examples/pluot_http/: Cargo.toml  README.md
examples/pluot_http/src/: main.rs
examples/pluot_slint/: Cargo.toml  README.md  build.rs
examples/pluot_slint/.cargo/: config.toml
examples/pluot_slint/src/: app.rs  main.rs
examples/pluot_slint/ui/: main_app.slint
examples/pluot_xilem/: Cargo.toml  README.md
examples/pluot_xilem/src/: main.rs
(+601 files in other folders)
