# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = [
    "pluot_core",
    "examples/pluot_cli",
    "examples/pluot_http"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
# TODO: license

# We use the 2021 edition which defaults to Resolver version 2
# (could alternatively specify resolver = "2" with edition = "2018").
# This allows us to specify target-specific dev-dependencies,
# so that `wasm-pack build --dev` does not try to pull in zarrs_filesystem.
edition = "2021"
rust-version = "1.92"
repository = "https://github.com/keller-mark/pluot"
authors = ["mkeller <7525285+keller-mark@users.noreply.github.com>"]

