# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = [
    "crates/pluot_core",
    "crates/pluot_zarr",
    "crates/pluot",
]
resolver = "2"

exclude = [
    # These example crates have lots of subdependencies.
    # To ensure that they get their own independent Cargo.lock files
    # to avoid subdependency conflicts, with the workspace packages or with each other,
    # we exclude them from the workspace and instead specify their dependencies with path = "../../crates/pluot".
    "examples/pluot_cli",
    "examples/pluot_http",
    "examples/pluot_xilem",
    "examples/pluot_egui",
]

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"

# We use the 2021 edition which defaults to Resolver version 2
# (could alternatively specify resolver = "2" with edition = "2018").
# This allows us to specify target-specific dev-dependencies,
# so that `wasm-pack build --dev` does not try to pull in zarrs_filesystem.
edition = "2021"
rust-version = "1.92"
repository = "https://github.com/keller-mark/pluot"
homepage = "https://pluot.dev"
authors = ["Mark Keller"]

categories = ["visualization", "graphics", "rendering", "science", "wasm"]
keywords = []

# During development, we do not care about unused variable or unused import warnings. TODO: remove this eventually.
[workspace.lints.rust]
unused = "allow"
non_snake_case = "allow"

[workspace.lints.clippy]
needless_return = "allow"
to_string_trait_impl = "allow"
neg_multiply = "allow"
let_and_return = "allow"
type_complexity = "allow"


[workspace.dependencies]
inventory = "0.3.21"

pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pythonize = { version = "0.27" }
pyo3-log = { version = "0.13.2" }

log = "~0.4" # TODO: make this python-specific, if continues to only be used in python bindings?
bytemuck = "1.23.2"
futures = "0.3.31"
futures-intrusive = "0.5"
once_cell = "1.21.3"
# We can use serde to deserialize JSON object parameters passed to the `render` function.
# Reference: https://docs.rs/serde-wasm-bindgen/latest/serde_wasm_bindgen/
serde = { version = "1.0.x", features = ["derive", "rc"] }

async-trait = "0.1.74"
quick_cache = "0.6.16"
svg = "0.18.0"
futures-time = { git = "https://github.com/keller-mark/futures-time.git", rev = "506d7bf" }

# For OME-Zarr image metadata parsing.
# We use this fork which relaxes things by not using serde(deny_unknown_fields).
ome_zarr_metadata = "0.3.0"
serde_json = "1.0.143"

# Local crates
# We register these here so that they can be used via .workspace = true by sibling crates.
pluot_core = { path = "crates/pluot_core" }
pluot_zarr = { path = "crates/pluot_zarr" }
pluot = { path = "crates/pluot" }

# WebGPU
wgpu = { version = "29.0.0" }
glam = { version = "0.30.8", features = ["encase"] }
encase = { version = "0.12.0" }

# Matrix multiplication for SVG rendering
nalgebra-glm = "0.3"

fontdue = "0.9.x" # For font rasterization and text layout.

lz-str = "0.2.1" # To compress SVG strings before passing to JS.

# Dev dependencies
resvg = "0.46.0" # For SVG rendering during unit tests to compare with raster-format outputs.
tiny-skia = "0.11.4" # Used when rendering with resvg (Pixmap target for rendering).
dify = "0.8.0" # For pixel diffing in unit tests.
image = { version = "0.25.9", default-features = false, features = ["bmp", "png"] } # For read/write to image formats like PNG in unit tests.
base64 = "0.22.1"
kompari = { git = "https://github.com/linebender/kompari", rev = "63476ab", default-features = false }


# We depend on tokio for the non-wasm unit tests that call async functions.
# Note: tokio is also used for the python feature (but without its "full" feature). "full" is needed for its async unit testing functionality.
tokio = { version = "1.47.1" }


# WASM-specific dependencies
wasm-bindgen = { version = "0.2.106" }
wasm-bindgen-futures = { version = "0.4.56" }
wasm-bindgen-shared = { version = "0.2.106" }
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.77" }
js-sys = { version = "0.3.77" }
serde-wasm-bindgen = { version = "0.6.5" }
console_error_panic_hook = { version = "0.1.7" }


# For zarrs: not using features "filesystem", "blosc", or "zstd" for zarrrs.
# Zstd and Blosc caused wasm-pack compilation to fail during usage of Snappy compression library.
# We need to specify uuid with feature "js", which is used by zarrrs.
uuid = { version = "1", features = ["v4", "js"] }
# Note: zarrs is also specified in dev-dependencies,
# since its "filesystem" feature is used for unit tests.
[workspace.dependencies.zarrs]
#version = "0.23.0"
path = "../zarrs/zarrs"
default-features = false
features = [
    "ndarray",
    "crc32c",
    "gzip",
    "sharding",
    "transpose",
    "async",
    "zstd",       # Using the "zstd" and "blosc" features adds ~0.3MB to the .wasm size in --release mode.
    "blosc",      # Possible to enable when using a zarrs branch that uses Blusc for blosc.
    # "filesystem", # Was working under zarrs_filesystem v0.3.8, stopped working in zarrs_filesystem v0.3.9
]


# Cargo **ignores** profile settings in non-root (workspace member) `Cargo.toml` files.
# Profile settings (`[profile.release]`, `[profile.dev]`, etc.) can only be specified in the **workspace root** `Cargo.toml`.
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Enable link-time optimization.
# This gives LLVM many more opportunities to inline and prune functions.
# Not only will it make the .wasm smaller, but it will also make it faster at runtime!
# The downside is that compilation will take longer.
# Reference: https://rustwasm.github.io/book/reference/code-size.html
lto = true

# Enable "codegen-units = 1" to tell `rustc` to optimize the whole crate at once.
# This also gives LLVM more opportunities to inline and prune functions.
# This will make the .wasm smaller and faster, but will also make compilation even longer
codegen-units = 1
