# This workspace root exists so that the pluot_core/pluot_zarr/pluot crates
# (linked via src/crates -> ../../crates) can resolve their `*.workspace = true`
# fields when cargo walks up from src/crates/pluot during R package installation.
# The pluotr_rs crate declares its own [workspace] and is not a member here.
[workspace]
members = ["crates/pluot_core", "crates/pluot_zarr", "crates/pluot"]
resolver = "2"

exclude = []

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.92"
repository = "https://github.com/keller-mark/pluot"
homepage = "https://pluot.dev"
authors = ["Mark Keller"]
categories = ["visualization", "graphics", "rendering", "science"]
keywords = []

[workspace.lints.rust]
unused = "allow"
non_snake_case = "allow"

[workspace.lints.clippy]
needless_return = "allow"
to_string_trait_impl = "allow"
neg_multiply = "allow"
let_and_return = "allow"
type_complexity = "allow"

[workspace.dependencies]
inventory = "0.3.21"

pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pythonize = { version = "0.27" }
pyo3-log = { version = "0.13.2" }

log = "~0.4"
bytemuck = "1.23.2"
futures = "0.3.31"
futures-intrusive = "0.5"
once_cell = "1.21.3"
serde = { version = "1.0.x", features = ["derive", "rc"] }

async-trait = "0.1.74"
quick_cache = "0.6.16"
svg = "0.18.0"

futures-time = { version = "3.1.0", default-features = false }

ome_zarr_metadata = "0.3.0"
serde_json = "1.0.143"

pluot_core = { version = "0.1.0", path = "crates/pluot_core" }
pluot_zarr = { version = "0.1.0", path = "crates/pluot_zarr" }
pluot = { version = "0.1.0", path = "crates/pluot" }

wgpu = { version = "29.0.1" }
glam = { version = "0.30.8", features = ["encase"] }
encase = { version = "0.12.0" }

nalgebra-glm = "0.3"

fontdue = "0.9.x"

lz-str = "0.2.1"

resvg = "0.46.0"
tiny-skia = "0.11.4"
dify = "0.8.0"
image = { version = "0.25.9", default-features = false, features = ["bmp", "png"] }
base64 = "0.22.1"
kompari = { git = "https://github.com/linebender/kompari", rev = "63476ab", default-features = false }

tokio = { version = "1.47.1" }

wasm-bindgen = { version = "0.2.106" }
wasm-bindgen-futures = { version = "0.4.56" }
wasm-bindgen-shared = { version = "0.2.106" }
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.77" }
js-sys = { version = "0.3.77" }
serde-wasm-bindgen = { version = "0.6.5" }
console_error_panic_hook = { version = "0.1.7" }

uuid = { version = "1", features = ["v4", "js"] }

[workspace.dependencies.zarrs]
version = "0.23.9"
default-features = false
features = [
    "ndarray",
    "crc32c",
    "gzip",
    "sharding",
    "transpose",
    "async",
    "zstd",
    "blosc",
]
