[package]
name = "pluot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
#license.workspace = true
repository.workspace = true
authors.workspace = true

exclude = []
categories = ["visualization", "graphics", "rendering", "science", "wasm"]
keywords = []

# Reference: https://drager.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[lib]
name = "pluot"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Define features to toggle which dependency is active
python = ["pyo3", "pyo3-async-runtimes", "pythonize", "tokio", "pyo3-log"]
# Define a feature for running unit tests in GPU-less environments
lacks_gpu = []


[dependencies]
# Workspace dependencies
pluot_core = { workspace = true }
pluot_zarr = { workspace = true }

inventory.workspace = true

# Python-specific dependencies
pyo3 = { version = "0.27", optional = true, features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }
pythonize = { git = "https://github.com/tuxu/pythonize.git", rev = "6140fe0", optional = true }
pyo3-log = { version = "0.13.2", optional = true }
# Note: tokio is also specified in dev-dependencies,
# since its "full" feature is used for our async unit tests.
tokio = { version = "1.47.1", optional = true }


# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.106" }
wasm-bindgen-futures = { version = "0.4.56" }
wasm-bindgen-shared = { version = "0.2.106" }
web-sys = { version = "0.3.77" }
js-sys = { version = "0.3.77" }
serde-wasm-bindgen = { version = "0.6.5" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }


# Fixes for getrandom. May not be necessary here if added to upstream zarrs config.toml.
# Reference: https://github.com/kylebarron/parquet-wasm/blob/ad18b841a8e788b0d4b17eb9deaca581d02bf887/Cargo.toml#L100C1-L110C18
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]


[dev-dependencies]
wasm-bindgen-test = "0.3.34"
resvg.workspace = true # For SVG rendering during unit tests to compare with raster-format outputs.
tiny-skia.workspace = true # Used when rendering with resvg (Pixmap target for rendering).
dify.workspace = true # For pixel diffing in unit tests.
image.workspace = true # For read/write to image formats like PNG in unit tests.


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]

# We depend on tokio for the non-wasm unit tests that call async functions.
# Note: tokio is also used for the python feature (but without its "full" feature). "full" is needed for its async unit testing functionality.
tokio = { workspace = true, features = ["full"] }



[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Enable link-time optimization.
# This gives LLVM many more opportunities to inline and prune functions.
# Not only will it make the .wasm smaller, but it will also make it faster at runtime!
# The downside is that compilation will take longer.
# Reference: https://rustwasm.github.io/book/reference/code-size.html
lto = true

# Enable "codegen-units = 1" to tell `rustc` to optimize the whole crate at once.
# This also gives LLVM more opportunities to inline and prune functions.
# This will make the .wasm smaller and faster, but will also make compilation even longer
codegen-units = 1
