[package]
name = "pluot"
description = "Plotting library designed for usage from Rust, Python, and JavaScript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
#license.workspace = true
repository.workspace = true
authors.workspace = true

exclude = ["pkg", "tests"]
categories = ["visualization", "graphics", "rendering", "science", "wasm"]
keywords = []

[lib]
name = "pluot"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

# Reference: https://drager.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Enable link-time optimization.
# This gives LLVM many more opportunities to inline and prune functions.
# Not only will it make the .wasm smaller, but it will also make it faster at runtime!
# The downside is that compilation will take longer.
# Reference: https://rustwasm.github.io/book/reference/code-size.html
lto = true

# Enable "codegen-units = 1" to tell `rustc` to optimize the whole crate at once.
# This also gives LLVM more opportunities to inline and prune functions.
# This will make the .wasm smaller and faster, but will also make compilation even longer
codegen-units = 1


[features]
default = []
# Define features to toggle which dependency is active
python = ["pluot_core/python", "pyo3"]
# Define a feature for running unit tests in GPU-less environments
lacks_gpu = ["pluot_core/lacks_gpu"]


[dependencies]
# Workspace dependencies
pluot_core = { workspace = true }
pluot_zarr = { workspace = true }

inventory.workspace = true
serde_json.workspace = true

# Python-specific dependencies
# Pyo3 with feature "extension-module" is needed at the level of the crate specified in pyproject.toml.
# Note that pluot_core also has python-specific dependencies, including pyo3,
# that are required there due to being used in the binding definitions.
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }

# Fixes for getrandom. May not be necessary here if added to upstream zarrs config.toml.
# Reference: https://github.com/kylebarron/parquet-wasm/blob/ad18b841a8e788b0d4b17eb9deaca581d02bf887/Cargo.toml#L100C1-L110C18
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]


[dev-dependencies]
wasm-bindgen-test.workspace = true
resvg.workspace = true # For SVG rendering during unit tests to compare with raster-format outputs.
tiny-skia.workspace = true # Used when rendering with resvg (Pixmap target for rendering).
dify.workspace = true # For pixel diffing in unit tests.
image.workspace = true # For read/write to image formats like PNG in unit tests.


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# We depend on tokio for the non-wasm unit tests that call async functions.
# Note: tokio is also used for the python feature (but without its "full" feature). "full" is needed for its async unit testing functionality.
tokio = { workspace = true, features = ["full"] }
