[package]
name = "pluot"
description = "Plotting library designed for usage from Rust, Python, and JavaScript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

exclude = ["pkg", "tests"]
categories.workspace = true
keywords.workspace = true

[lib]
name = "pluot"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

# Reference: https://drager.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']


[features]
default = []
# Define features to toggle which dependency is active
python = ["pluot_core/python", "pyo3"]
# Define a feature for running unit tests in GPU-less environments
lacks_gpu = ["pluot_core/lacks_gpu"]
# Embed URW Core 35 fonts via include_bytes! for plain-Rust use (enables PDF Base-14 font tests)
embed_fonts = ["pluot_core/embed_fonts"]


[dependencies]
# Workspace dependencies
pluot_core = { workspace = true }
pluot_zarr = { workspace = true }

inventory.workspace = true
serde.workspace = true
serde_json.workspace = true

# Python-specific dependencies
# Pyo3 with feature "extension-module" is needed at the level of the crate specified in pyproject.toml.
# Note that pluot_core also has python-specific dependencies, including pyo3,
# that are required there due to being used in the binding definitions.
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }

# Fixes for getrandom. May not be necessary here if added to upstream zarrs config.toml.
# Reference: https://github.com/kylebarron/parquet-wasm/blob/ad18b841a8e788b0d4b17eb9deaca581d02bf887/Cargo.toml#L100C1-L110C18
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]


[dev-dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-test.workspace = true
serde-wasm-bindgen.workspace = true

# Used for test that compares LayerParams enum and inventory layer registrations.
strum = { version = "0.28", features = ["derive"] }


# Packages for image diffing unit tests.
image.workspace = true # For read/write to image formats like PNG in unit tests.
kompari.workspace = true # For pixel-diff snapshot testing.
# resvg.workspace = true # For SVG rendering during unit tests to compare with raster-format outputs.
# tiny-skia.workspace = true # Used when rendering with resvg (Pixmap target for rendering).


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# We depend on tokio for the non-wasm unit tests that call async functions.
# Note: tokio is also used for the python feature (but without its "full" feature). "full" is needed for its async unit testing functionality.
tokio = { workspace = true, features = ["full"] }
