[package]
name = "pluot_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
#license.workspace = true
repository.workspace = true
authors.workspace = true

exclude = []
categories = []
keywords = []

[lib]
name = "pluot_core"
crate-type = ["lib"]

[features]
default = []
# Define features to toggle which dependency is active
python = ["pyo3", "pyo3-async-runtimes", "pythonize", "pyo3-log", "tokio"]
# Define a feature for running unit tests in GPU-less environments
lacks_gpu = []


[dependencies]
inventory.workspace = true

# Python-specific dependencies
pyo3 = { workspace = true, optional = true }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"], optional = true }
pythonize = { version = "0.27", optional = true }
pyo3-log = { version = "0.13.2", optional = true }
# Note: tokio is also specified in dev-dependencies,
# since its "full" feature is used for our async unit tests.
tokio = { workspace = true, optional = true }


# Core dependencies
log.workspace = true # TODO: make this python-specific, if continues to only be used in python bindings?
bytemuck.workspace = true
futures.workspace = true
futures-intrusive.workspace = true
once_cell.workspace = true
# We can use serde to deserialize JSON object parameters passed to the `render` function.
# Reference: https://docs.rs/serde-wasm-bindgen/latest/serde_wasm_bindgen/
serde.workspace = true
# For zarrs: not using features "filesystem", "blosc", or "zstd" for zarrrs.
# Zstd and Blosc caused wasm-pack compilation to fail during usage of Snappy compression library.
# We need to specify uuid with feature "js", which is used by zarrrs.
uuid.workspace = true
# Note: zarrs is also specified in dev-dependencies,
# since its "filesystem" feature is used for unit tests.
zarrs = { workspace = true, default-features = false, features = [
    "ndarray",
    "crc32c",
    "gzip",
    "sharding",
    "transpose",
    "async",
    # "filesystem", # was working under zarrs_filesystem v0.3.8, stopped working in zarrs_filesystem v0.3.9
] }
async-trait.workspace = true
quick_cache.workspace = true
svg.workspace = true
futures-time.workspace = true

# For OME-Zarr image metadata parsing.
# We use this fork which relaxes things by not using serde(deny_unknown_fields).
ome_zarr_metadata.workspace = true
serde_json.workspace = true

# WebGPU
wgpu.workspace = true
glam.workspace = true
encase.workspace = true

# Matrix multiplication for SVG rendering
nalgebra-glm.workspace = true


fontdue.workspace = true # For font rasterization and text layout.

lz-str.workspace = true # To compress SVG strings before passing to JS.

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.106" }
wasm-bindgen-futures = { version = "0.4.56" }
wasm-bindgen-shared = { version = "0.2.106" }
web-sys = { version = "0.3.77" }
js-sys = { version = "0.3.77" }
serde-wasm-bindgen = { version = "0.6.5" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }


[dev-dependencies]
# None

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Note zarrs is also used for core dependencies (but without its "filesystem" feature). "filesystem" is needed for unit tests.
zarrs = { workspace = true, default-features = false, features = [
    "ndarray",
    "crc32c",
    "gzip",
    "sharding",
    "transpose",
    "async",
    "filesystem",
] }

# We depend on tokio for the non-wasm unit tests that call async functions.
# Note: tokio is also used for the python feature (but without its "full" feature). "full" is needed for its async unit testing functionality.
tokio = { workspace = true, features = ["full"] }
